# yourwishesfuneraladvocacy

./: .dockerignore  .env  .envrc  .gitignore  Dockerfile  LICENSE.md  Pipfile  README.md  SECURITY.md  docker-compose-services.yml  docker-compose.yml  env-template  init.py  init.sh  initdb.sh  make_env.py  pyproject.toml  requirements-dev.txt  requirements.txt  s3-download.sh  s3-upload.sh  startapp.sh  upgrade-app.sh  wagtail_settings.py  ywfa-backup.sh
app/: .gitignore  manage.py  manage.sh  package-lock.json  package.json  pytest.ini
app/cms/: models.py
app/cms/migrations/: 0001_initial.py  0002_auto_20200823_1629.py  0002_auto_20200825_2051.py  0002_homepage.py  0003_auto_20200825_2055.py  0004_auto_20200826_0113.py  0005_auto_20200826_0930.py  0006_auto_20200829_1733.py  0007_auto_20200829_2350.py  0008_auto_20200905_1255.py  0008_carouselimage.py  0009_cmspage_display_title.py  0010_auto_20200905_0004.py  0011_auto_20200905_0006.py  0012_merge_20200905_1413.py  0013_auto_20200905_1415.py  0014_auto_20200905_1441.py  0015_auto_20200905_1544.py  0016_carouselimage_carousel_interval.py  0017_auto_20201107_1041.py  0018_auto_20210213_0905.py
app/cms/models/: __init__.py  cms.py
app/cms/models/blocks/: _image.py  article.py
app/cms/templates/cms/: article_page.html  base.html  cms_base.html  cms_page.html
app/cms/templates/partials/: _main.html  _navigation.html
app/cms_blocks/: apps.py  blocks.py  models.py
app/cms_blocks/templates/blocks/: call_to_action_block.html  (+8 more)
app/cms_blocks/templatetags/: embedurl.py
app/contact/: models.py
app/contact/migrations/: 0001_initial.py  0002_auto_20200901_1454.py  0003_auto_20200901_1549.py
app/home/: models.py
app/home/migrations/: 0001_initial.py
app/sass_src/: admin.scss  cms.scss  ywfa.scss
app/sass_src/partials/: _functions.scss  _variables.scss
app/shop/: admin.py  cart.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
app/shop/migrations/: 0001_initial.py  0002_auto_20210214_0134.py  0003_auto_20210216_1401.py
app/shop/templatetags/: cart.py
app/shop/tests/: test_cart.py  test_convert_to_str.py
app/templates/: base.html
app/testimonials/: admin.py  models.py
app/testimonials/migrations/: 0001_initial.py
app/ywfa/: asgi.py  urls.py  wsgi.py
app/ywfa/settings/: base.py  beta.py  dev.py  local.py  logger.py  production.py
app/ywfa/static/: .gitignore
app/ywfa/templates/: base.html
app/ywfa_settings/: apps.py  models.py
app/ywfa_settings/migrations/: 0001_initial.py  0002_auto_20200907_2337.py
scripts/: db-init.sh  db-restore.sh  env-template  envfile.py  init.py  initdb.sh  realpath.py  s3-download.sh  s3-upload.sh  s3_policy-beta.json  s3_policy-production.json  startapp.sh  sup.py  upgrade-app.sh  ywfa-backup.sh
(+37 files in other folders)
