[tool.poetry]
name = "ywfa"
version = "2.1.0"
description = "Your Wishes Funeral Advocacy"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
# wagtail
wagtail = "~=2.11"
wagtailmenus = "~=3.0"
# django base
Django = "~=3.1"
asgiref = "~=3.3"
brotli = "~=1.0"
# django extras
django-env = {git = "https://github.com/davidn-news/django-env.git", rev="main"}
django-extensions = "~=3.1"
django-widget-tweaks = "~=1.4"
django-crispy-forms = "~=1.10"
stripe = "~=2.55"
sentry-sdk = "~=0.19"
# storages
django-storages = "~=1.11"
boto3 = "~=1.17"
# db
psycopg2 = "~=2.8"
# cache
django-redis = "~=4.12"
# frontend
django-npm = "~=1.0.0"
libsass = "~=0.20.1"
django-sass = "~=1.0.0"
django-compressor = "~=2.4"
calmjs = "~=3.4.1"
csscompressor = "~=0.9.5"
# general
python-dateutil = "~=2.8"
# web server
gunicorn = "*"
whitenoise = "~=5.2"

[tool.poetry.dev-dependencies]
pytest = "~=6.2"
pytest-django = "~=4.1"
django-debug-toolbar = "~=3.2"
pytest-pythonpath = "^0.7.3"

[tool.pytest.ini_options]
python_paths = ["app"]
DJANGO_SETTINGS_MODULE = "ywfa.settings.environ.dev"
filterwarnings = [
  'ignore:.*ugettext_lazy\(\) is deprecated',
  'ignore:.*providing_args argument is deprecated',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
